fix overlapping title issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,7 +67,7 @@ body {
 			padding: 16px 12px 6px 14px;
 			display: block;
 			-webkit-margin-before: 1em;
-			-webkit-margin-after: 1em;
+			-webkit-margin-after: 0;
 			-webkit-margin-start: 0px;
 			-webkit-margin-end: 0px;
 			-webkit-transition: background-color $fade-time ease-out;
